# VCPP-2

./: .gitignore  CMakeLists.txt  ReadMe.md
TestEnv/: basic.vasm  basic.vcpp  basic.vdef  basic.vobj  basic.vtd  compile.sh  console.vobj  main.vasm  main.vdef  main.vobj  main.vtd  math.vobj  test.out  test.py  test.str  test.tdt  test.vasm  test.vdef  test.vobj  test.vtd
TestEnv/builtin/: basic.vasm  basic.vcpp  basic.vdt  console.vasm  console.vcpp  console.vdef  console.vtd  math.vasm  math.vdef  math.vtd
TestEnv/case1/: test.vcpp
TestEnv/case2/: main.vcpp
TestEnv/case3/: main.vcpp
TestEnv/case4/: main.vcpp
TestEnv/case5/: main.vcpp
TestEnv/case6/: algorithm.vcpp  array.vcpp  basic.vcpp  console.vcpp  formatstr.vcpp  main.vcpp  math.vcpp  test2.vcpp
Tools/: message.cpp  message.h  tools.cpp  tools.h
VASM/: CMakeLists.txt  cmdls.cpp  cmdls.h  command.list  command_list.in  command_list.out  command_str.list  commandlist.cpp  commandlist.h  generate_command.py  instructions.in  main.cpp  tcommand.list  tcommand_str.list  vcodebuilder.cpp  vcodebuilder.h  vobjbuilder.cpp  vobjbuilder.h
VCPP/: CMakeLists.txt  builderes.cpp  chketype.cpp  compiler.cpp  compiler.h  constexprcalc.cpp  constexprcalc.h  cpltree.h  enum.in  enum.out  gen.h  generateEnumString.py  genhelper.cpp  geninner.h  gensymbol.cpp  genvcode.cpp  idensys.cpp  idensys.h  main.cpp  searchsymbol.cpp  syntaxcandy.cpp  syntaxnode.cpp  syntaxnode.h  tokenlist.cpp  tokenlist.h  typesystem.cpp  vcodegen.cpp  vcodegen.h
VGVM/: CMakeLists.txt  Templates.S  a.out  gtmpl.c  gtmpl.h  instruction.c  instruction.h  insttmpl.h  main.c  syscall.c  syscall.h  test.s  tmpl.c  tmpl.h  tools.c  tools.h  vgvm.c  vgvm.h
VGVM/Docs/: JIT.md
VM/: CMakeLists.txt  main.c  mmanage.c  mmanage.h  rflsys.c  rflsys.h  tools.c  tools.h  typedata.h  vm.c  vm.h
VOS/: .gitignore  BootLoader.efi  BootLoader2.efi  bochsrc  boot.img  install-EFI-wsl.sh  install-EFI.sh  run.sh  waitForGoalDisk.py
VOS/Tools/: kallsyms  kallsyms.S  kallsyms.c
VOS/UEFIloader/: main.c  main.inf  makefile
VOS/bootloader/: boot.asm  fat12.inc  loader.asm  makefile
VOS/kernel/: .depend  Kernel.lds  head.S  main.c  makefile  rely.py
VOS/kernel/hardware/: 8259A.c  8259A.h  APIC.c  APIC.h  PCIe.c  PCIe.h  UEFI.c  UEFI.h  USB.h  cpu.c  cpu.h  device.h  hardware.c  keyboard.c  keyboard.h  timer.h
VOS/kernel/includes/: UEFI.h  config.h  cpu.h  gate.h  hardware.h  interrupt.h  lib.h  linkage.h  log.h  memory.h  printk.h  task.h  trap.h
VOS/kernel/interrupt/: entry.S  gate.c  gate.h  interrupt.c  interrupt.h  softirq.c  softirq.h  trap.c  trap.h
VOS/kernel/lib/: algorithm.c  algorithm.h  ds.c  ds.h  io.c  io.h  lib.c  memop.c  memop.h  (+4 more)
VOS/notes/: memory.md
vscode-highlight/: CHANGELOG.md  README.md  language-configuration.json  package.json  vsc-extension-quickstart.md
vscode-highlight/syntaxes/: vcpp.tmLanguage.json
(+68 files in other folders)
